# altman-maintained

./: .clang-format  .gitignore  CMakeLists.txt  README  README.md  build.cmd  format.cmd  vcpkg.json
.github/workflows/: build-release.yml
src/: main.cpp  ui.cpp  ui.h
src/assets/lists/: adjectives.txt  nouns.txt
src/components/: backup.cpp  context_menus.h  data.cpp  data.h  menu.cpp  webview_helpers.h
src/components/accounts/: accounts_context_menu.cpp  accounts_join_ui.cpp  accounts_tab.cpp
src/components/avatar/: inventory_tab.cpp
src/components/console/: console_tab.cpp
src/components/friends/: friends_actions.cpp  friends_actions.h  friends_tab.cpp
src/components/games/: games_tab.cpp  games_utils.cpp
src/components/history/: history_tab.cpp  history_utils.cpp  history_utils.h  log_parser.cpp
src/components/servers/: servers_tab.cpp  servers_utils.cpp
src/components/settings/: settings_tab.cpp
src/utils/core/: account_utils.cpp  account_utils.h  base64.h  status.h  time_utils.h
src/utils/network/: http.hpp
src/utils/network/roblox/: auth.h  authenticated_http.h  common.h  games.h  hba.h  hba_client.h  session.h  social.h
src/utils/system/: launcher.hpp  multi_instance.h  roblox_control.h  update.h
src/utils/ui/: webview.hpp
